--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.4.20",
+    "mongoose": "^5.4.21",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "validator": "^10.11.0"
   }
 }
