--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv-safe": "^8.2.0",
     "elasticsearch": "^15.4.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
