--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
     "elasticsearch": "^15.4.1",
     "express": "~4.16.0",
+    "express-validator": "^6.10.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.21",
+    "mongoose": "^5.11.18",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "validator": "^10.11.0"
