--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.9",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.2",
     "validator": "^10.11.0"
   }
 }
