--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.13.9",
     "morgan": "~1.9.0",
     "pug": "^3.0.2",
+    "uuid": "^8.3.2",
     "validator": "^10.11.0"
   }
 }
